# stardust

./: .gitignore  A2A_IMPLEMENTATION.md  A2A_STANDARD_ALIGNMENT.md  AI_ARCHITECTURE.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  MEMORY.md  QUICK_START.md  README.md  README_zh.md  RELEASES.md  RELEASE_v0.20.0.md  RELEASE_v0.21.0.md  SIDECAR_MIGRATION.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.js  vite.config.ts
agent/: promptTesting.md  release.md
agents/: release.md
brainPlusDesktop/: PLUGIN_ARCHITECTURE.md  design.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
brainPlusMobile/: index.html  package-lock.json  package.json
brainplus-engine/: Cargo.toml
electron/: global.d.ts  main.ts  preload.ts
memory/: architecture-design.md  key-tech-choices.md  project-status.md
public/: CHANGELOG.md
src/: App.tsx  App.vue  index.css  main.js  main.tsx
src/types/: ai.ts  (+6 more)
stardust-engine/: Cargo.toml
stardust-engine/src/: inference.rs  main.rs  protocol.rs
stardust-engine/src/handlers/: chat.rs  fs.rs  git.rs  local_model.rs  mcp.rs  mod.rs  sandbox.rs  search.rs  terminal.rs
supabase/: agents.sql  ai_model_favorites.sql  diary.sql  inspiration.sql  toolbox.sql  user_memories.sql
supabaseSQL/: agents.sql  inspiration.sql
todo/: alignWithClaudeCode.md  ccSourceFindings.md  claudeCodePromptAnalysis.md  codeAgentTODO.md  coding-optimization-todo.md  future.md  next.md  performanceTuning.md  pluginWorkshopTODO.md  promptAndDisclosure.md  promptRewriteTODO.md  tool-disclosure-v2.md  (+1 more)
(+260 files in other folders)
