[package]
name = "brainplus_engine"
version = "0.1.0"
edition = "2021"
description = "BrainPlus Sidecar Engine — Rust backend for AI-powered desktop coding assistant"

[[bin]]
name = "brainplus-engine"
path = "src/main.rs"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
anyhow = "1"
thiserror = "2"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 文件系统工具
walkdir = "2"                          # 高效递归目录遍历（替代 find）
ignore = "0.4"                         # ripgrep 同款——自动尊重 .gitignore

# 正则（grep 功能）
regex = "1"

# 流式行读取（stdin JSON-RPC）
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# 工具
base64 = "0.22"
humantime = "2"

# PTY 终端（替代 node-pty）
portable-pty = "0.8"

# HTTP 客户端（搜索/抓取）
reqwest = { version = "0.12", features = ["json", "stream"] }

# 系统工具
dirs = "5"
open = "5"

# 本地模型推理 (llama.cpp)
llama-cpp-2 = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
